# privacy-pools

./: .gitignore  .tool-versions  Cargo.toml  LICENSE  README.md  Scarb.toml  account-file.json  requirements.txt  snfoundry.toml
asp/: Cargo.toml
asp/src/: deposit.rs  main.rs  starknet.rs
circuits/: example.circom  merkleTree.circom  mockHash.circom  pool.circom  withdraw.circom
cli/: Cargo.toml
cli/src/: main.rs
cli/src/starknet/: mod.rs
client/: Cargo.toml  build.rs
client/src/: account.rs  append_only_merkle_tree.rs  circuit.rs  execution_prepare.rs  hash.rs  lib.rs  merkle_tree.rs
client/src/abigen/: ecip.rs  erc20.rs  mod.rs  pool.rs  privacy_pools_garaga_groth_16_verifierbn_254.rs  privacy_pools_garaga_pool.rs  privacy_pools_garaga_universalecip.rs  verifier.rs
client/src/deploy_declare/: declare.rs  deploy.rs  mod.rs  pending.rs
client/src/hash/: constants.rs
client/src/merkle/: append_merkle_tree.rs  dumb_merkle_tree.rs  hybrid_merkle_tree.rs  merkle_tree.rs  mod.rs
client/src/prover/: garaga_cli_helper.rs  mod.rs
client/src/testnet/: mod.rs  runner.rs
client/src/tests/: contract_deposit_test.rs  contract_withdraw_test.rs  deployment_test.rs  mod.rs  pool_account_test.rs  prover_test.rs  verifier_test.rs
contracts/: Scarb.toml
contracts/src/: lib.cairo  pool.cairo
crates/hash/: Cargo.toml
crates/hash/src/: functional.rs  lib.rs
crates/merkle/: Cargo.toml
crates/merkle/src/: append.rs  dumb.rs  hybrid.rs  lib.rs  structs.rs  traits.rs  utils.rs
crates/starknet-pool-account/: Cargo.toml
pool/: Scarb.toml
pool/src/: account.cairo  ecip.cairo  lib.cairo  merkle.cairo  pool.cairo  poseidon.cairo  verifier.cairo
pool/src/account/: account_mixin.cairo  pool_account.cairo  utils.cairo
pool/src/verifier/: groth16_verifier.cairo  groth16_verifier_constants.cairo
scripts/: exec.sh  setup.sh  test-exec.sh  test.sh
verifier/: Scarb.toml
verifier/src/: groth16_verifier.cairo  groth16_verifier_constants.cairo  lib.cairo
