[workspace]
resolver = "2"
members = ["client"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
cainome = { git = "https://github.com/piniom/cainome", branch = "U256-improvements" }
futures = "0.3.31"
lazy_static = "1.5.0"
num-bigint = { version = "0.4.6", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
starknet = "0.12.0"
starknet-crypto = "0.7.3"
starknet-types-core = { version = "0.1.7", features = ["curve", "hash"] }
thiserror = "2.0.9"
tokio = { version = "1.42.0", features = [
    "macros",
    "time",
    "full",
    "rt-multi-thread",
] }
ark-ff = "0.5.0"
prefix-hex = "0.7.1"