[workspace]
resolver = "2"
members = ["bin/asp", "cli", "client", "crates/hash", "crates/merkle"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
axum = { version = "0.8.2", features = ["http2"] }
cainome = { git = "https://github.com/piniom/cainome", features = [
    "abigen-rs",
], branch = "U256-improvements" }
clap = { version = "4.5.27", features = ["derive", "env"] }
futures = "0.3.31"
lazy_static = "1.5.0"
num-bigint = { version = "0.4.6", features = ["serde"] }
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
starknet = "0.12.0"
starknet-crypto = "0.7.3"
starknet-types-core = { version = "0.1.7", features = ["curve", "hash"] }
thiserror = "2.0.9"
tokio = { version = "1.42.0", features = [
    "macros",
    "time",
    "full",
    "rt-multi-thread",
] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
ark-ff = "0.5.0"
prefix-hex = "0.7.1"
hash = { path = "./crates/hash" }
merkle = { path = "./crates/merkle" }
client = { path = "./client" }
