[workspace]
resolver = "2"
members = [
    "asp",
    "cli",
    "client",
    "crates/hash",
    "crates/merkle",
    "crates/starknet-pool-account",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
ark-ff = "0.5.0"
axum = { version = "0.8.1", features = ["http2"] }
cainome = { git = "https://github.com/piniom/cainome", features = [
    "abigen-rs",
], branch = "U256-improvements" }
clap = { version = "4.5.27", features = ["derive", "env"] }
client = { path = "./client" }
futures = "0.3.31"
hash = { path = "./crates/hash" }
lazy_static = "1.5.0"
merkle = { path = "./crates/merkle" }
num-bigint = { version = "0.4.6", features = ["serde"] }
prefix-hex = "0.7.1"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
starknet = "0.13.0"
starknet-crypto = "0.7.4"
starknet-types-core = { version = "0.1.7", features = ["curve", "hash"] }
starknet-types-rpc = { git = "https://github.com/neotheprogramist/types-rs.git", rev = "3ee4325a72481e526b7c4fa0592ad822a391658b" }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = [
    "macros",
    "time",
    "full",
    "rt-multi-thread",
] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
