[package]
name = "asp"
version.workspace = true
edition.workspace = true

[dependencies]
axum.workspace = true
cainome.workspace = true
clap.workspace = true
client.workspace = true
hash.workspace = true
merkle.workspace = true
serde.workspace = true
starknet.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[build-dependencies]
cainome.workspace = true
