[package]
name = "cli"
version.workspace = true
edition.workspace = true

[dependencies]
cainome.workspace = true
clap.workspace = true
client.workspace = true
futures.workspace = true
reqwest.workspace = true
serde_json.workspace = true
serde.workspace = true
starknet.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true

[build-dependencies]
cainome.workspace = true
