[package]
name = "client"
version.workspace = true
edition.workspace = true

[dependencies]
ark-ff.workspace = true
cainome.workspace = true
futures.workspace = true
hash.workspace = true
lazy_static.workspace = true
merkle.workspace = true
num-bigint.workspace = true
prefix-hex.workspace = true
serde_json.workspace = true
serde.workspace = true
starknet-crypto.workspace = true
starknet-types-core.workspace = true
starknet-types-rpc.workspace = true
starknet.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[build-dependencies]
cainome.workspace = true
